fixed encoder/decoder issues